@@ -336,22 +336,13 @@ void WebInspectorFrontendClient::updateWindowTitle() const
     if (window)
         return window;
 
-    bool useTexturedWindow = useWebKitWebInspector();
-
-    NSUInteger styleMask = (NSTitledWindowMask | NSClosableWindowMask | NSMiniaturizableWindowMask | NSResizableWindowMask);
-
-    if (useTexturedWindow)
-        styleMask |= NSTexturedBackgroundWindowMask;
-
+    NSUInteger styleMask = (NSTitledWindowMask | NSClosableWindowMask | NSMiniaturizableWindowMask | NSResizableWindowMask | NSTexturedBackgroundWindowMask);
     window = [[NSWindow alloc] initWithContentRect:NSMakeRect(60.0, 200.0, 750.0, 650.0) styleMask:styleMask backing:NSBackingStoreBuffered defer:NO];
     [window setDelegate:self];
     [window setMinSize:NSMakeSize(400.0, 400.0)];
-
-    if (useTexturedWindow) {
-        [window setAutorecalculatesContentBorderThickness:NO forEdge:NSMaxYEdge];
-        [window setContentBorderThickness:55. forEdge:NSMaxYEdge];
-        WKNSWindowMakeBottomCornersSquare(window);
-    }
+    [window setAutorecalculatesContentBorderThickness:NO forEdge:NSMaxYEdge];
+    [window setContentBorderThickness:55. forEdge:NSMaxYEdge];
+    WKNSWindowMakeBottomCornersSquare(window);
 
     [self setWindow:window];
     [window release];
